<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    tools:context=".View.Theme_Activity">

        <TextView
            android:id="@+id/title"
            style="@style/PrimaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:text="@string/theme_title"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/themeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/title">

            <RadioButton
                android:id="@+id/themeDark"
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_theme" />

            <RadioButton
                android:id="@+id/themeLight"
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme" />

            <RadioButton
                android:id="@+id/themeBattery"
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/battery_saver_theme" />

            <RadioButton
                android:id="@+id/themeSystem"
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_theme" />

        </RadioGroup>





</androidx.constraintlayout.widget.ConstraintLayout>